Mongoose orm implementation
